# AgenticDataPipeline

./: Dockerfile  README.md  config.ini  main.py  prompts.yaml  pyproject.toml  requirements.txt
api/: models.py  services.py
notebooks/: IndividualAgents.ipynb  SQLPoplulator.ipynb  VectorDBPopulator.ipynb
src/components/: internetSearchAgent.py  ragAgent.py  reasoningAgent.py  sqlAgent.py  synthesizerAgent.py
src/workflows/: workflow.py
utils/: exceptions.py  initMethods.py  logger.py
